package com.company.creational.abstract_factory.button;

public interface Button {
    void paint();
}
