package com.company.creational.abstract_factory.checkbox;

public interface Checkbox {
    void paint();
}
